traces/bug_207.txt
examples++-mpi/MUMPS_FreeFem.cpp:785: error: DEAD_STORE
  The value written to &ierr (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/MUMPS_FreeFem.cpp:785:6: Write of unused value
783.   	      
784.   	    int commSize;	    
785.   	    ierr=MPI_Comm_size(comm,&commSize);
            ^
786.   	    int m_loc_fst = m/commSize;
787.   	    int m_loc;
